CATS-1327: removed redundant workflow implementation - edit modal pop up window as partial is added

--- a/Web/Areas/Logistics/Views/Transfer/Index.cshtml
+++ b/Web/Areas/Logistics/Views/Transfer/Index.cshtml
@@ -269,7 +269,7 @@
     
     function OnEdit(transferId) {
       //  $('#ParentBusinessProcessID').val(BusinessProcessID);
-        $('#TransferID').val(JSON.stringify('{transferId:' + transferId + '}'));
+        $('#Transfer').val(JSON.stringify('{transferId:' + transferId + '}'));
      //   $('#stateID').val(nextstate);
        
         $('#modal-dialog-Edit').modal();
