--- a/Web/Areas/Logistics/Views/Transfer/Edit.cshtml
+++ b/Web/Areas/Logistics/Views/Transfer/Edit.cshtml
@@ -5,7 +5,7 @@
     const string pageName = "Logistics.Transfer.Edit";
 }
 
-<div class="modal-dialog">
+<div class="modal-dialog" id="modal-dialog-Edit">
     <div class="modal-content">
 
 
