CATS-1304: performance tuning linq to view

--- a/Web/Areas/Finance/Views/Home/Index.cshtml
+++ b/Web/Areas/Finance/Views/Home/Index.cshtml
@@ -88,6 +88,18 @@
                             </select>
                         </div>
                         <div class="col-md-6">
+                            <label class="control-label col-md-6">Select Start Date</label>
+                            <div class="col-md-6">
+                                <input id="txtDate1" class="cats-datepicker2  form-control" type="text" placeholder="mm/dd/yyyy">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <label class="control-label col-md-6">Select End Date</label>
+                            <div class="col-md-5">
+                                <input id="txtDate2" class="cats-datepicker2  form-control" type="text" placeholder="mm/dd/yyyy">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
                             <div class="form-group form-md-line-input">
                                 <input type="text" class="form-control" id="takeFirstId" ng-model="search.transportOrderNo" value="10">
                                 <label for="serachto">See the first n records</label>
