CATS-1330, Swap receipt plan has been modified.

--- a/Web/Areas/Logistics/Views/Swap/Detail.cshtml
+++ b/Web/Areas/Logistics/Views/Swap/Detail.cshtml
@@ -84,7 +84,7 @@
                                  if (actions.Name == "Approve")
                                  {
                                      <li class="edit_button">
-                                         <a href="javascript:promot_workflow(@Model.BusinessProcessID ,@actions.FinalStateID,'@actions.Name',@Model.TransferID)" title="@actions.Name">"Approve(Send to Hub)"</a>
+                                         <a href="javascript:promot_workflow(@Model.BusinessProcessID ,@actions.FinalStateID,'@actions.Name',@Model.TransferID)" title="@actions.Name">Approve(Send to Hub)</a>
                                      </li>
                                  }
                              }
